chore: update packages move server to server  dir

--- a/package.json
+++ b/package.json
@@ -13,25 +13,22 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "scripts": {
-    "ng": "ng",
-    "start": "set NODE_ENV=production && node app.js",
-    "heroku-prebuild": "npm i -g @angular/cli ts-node",
-    "heroku-postbuild": "ng build --prod --aot --no-progress",
-    "server:run": "nodemon",
-    "hmr": "concurrently \"npm run server:run \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
-    "dev": "concurrently \"npm run server:run \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint --type-check",
+    "clean": "rimraf node_modules package-lock.json",
+    "build": "tsc -p ./server && ng build --prod --aot",
     "test": "ng test --single-run --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --single-run --no-progress",
     "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
-    "build": "npm run client:build && npm run server:build",
-    "clean": "rimraf node_modules package-lock.json",
-    "server:build": "tsc -p ./server",
-    "client:build": "ng build --prod --aot",
-    "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
+    "start": "set NODE_ENV=production && node app.js",
+    "hmr": "concurrently \"nodemon \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
+    "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
+    "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
+    "heroku-prebuild": "npm i -g @angular/cli ts-node",
+    "heroku-postbuild": "ng build --prod --aot --no-progress",
+    "ng": "ng"
   },
   "dependencies": {
     "@angular/animations": "^5.1.2",
@@ -50,8 +47,8 @@
     "@nestjs/microservices": "^4.5.2",
     "@nestjs/testing": "^4.5.2",
     "@nestjs/websockets": "^4.5.2",
-    "@ngx-translate/core": "8.0.0",
-    "@ngx-translate/http-loader": "2.0.0",
+    "@ngx-translate/core": "9.0.2",
+    "@ngx-translate/http-loader": "2.0.1",
     "@types/bcrypt": "^1.0.0",
     "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "^2.0.3",
@@ -61,7 +58,7 @@
     "angular-tree-component": "^6.0.0",
     "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.0.0-beta.3",
     "compression": "^1.7.1",
     "config": "^1.29.0",
     "cookie-parser": "^1.4.3",
@@ -81,13 +78,13 @@
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.5.6",
-    "ts-node": "~3.3.0",
+    "ts-node": "~4.1.0",
     "typescript": "~2.6.2",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.2",
+    "@angular/cli": "^1.6.3",
     "@angular/language-service": "^5.1.2",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^1.8.0",
@@ -97,7 +94,7 @@
     "@types/faker": "^4.1.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "codelyzer": "~4.0.1",
+    "codelyzer": "~4.0.2",
     "concurrently": "^3.5.1",
     "faker": "^4.1.0",
     "jasmine-core": "~2.8.0",
@@ -109,7 +106,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-typescript": "^3.0.9",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "mockgoose": "^7.3.3",
     "protractor": "~5.2.2",
     "rimraf": "^2.6.2",
