--- a/package.json
+++ b/package.json
@@ -42,20 +42,21 @@
     "@angular/router": "^5.1.2",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "@nestjs/common": "^4.5.2",
-    "@nestjs/core": "^4.5.2",
-    "@nestjs/microservices": "^4.5.2",
-    "@nestjs/testing": "^4.5.2",
-    "@nestjs/websockets": "^4.5.2",
+    "@nestjs/common": "^4.5.4",
+    "@nestjs/core": "^4.5.4",
+    "@nestjs/microservices": "^4.5.3",
+    "@nestjs/mongoose": "^1.0.2",
+    "@nestjs/testing": "^4.5.4",
+    "@nestjs/websockets": "^4.5.3",
     "@ngx-translate/core": "9.0.2",
     "@ngx-translate/http-loader": "2.0.1",
     "@types/bcrypt": "^1.0.0",
-    "@types/jasmine": "^2.8.2",
+    "@types/jasmine": "^2.8.3",
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "2.2.45",
     "@types/node": "~8.5.2",
     "@types/supertest": "^2.0.4",
-    "angular-tree-component": "^6.0.0",
+    "angular-tree-component": "^7.0.1",
     "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
     "bootstrap": "^4.0.0-beta.3",
@@ -71,7 +72,7 @@
     "multer": "^1.3.0",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "ngx-clickout": "^1.0.2",
-    "nodemon": "^1.14.3",
+    "nodemon": "^1.14.7",
     "normalize-css": "^2.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
