--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,19 +2,21 @@
     "compileOnSave": false,
     "compilerOptions": {
         "module": "commonjs",
-        "outDir": "./dist",
+        "outDir": "../dist",
         "sourceMap": false,
         "declaration": false,
+        "skipLibCheck": true,
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "target": "es6"
     },
     "include": [
-        "server/modules/**/*",
-        "server/server.ts"
+        "modules/**/*",
+        "server.ts"
     ],
     "exclude": [
-        "server/**/*.spec.ts"
+        "./node_modules",
+        "**/*.spec.ts"
     ]
 }
