chore: proper build

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /out-tsc
 
 # Ignore generated js and .map files after typescript transpiling
+/server/**/*.js
 /src/**/*.js
 *.map
 test/client/**/*.js
