--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "scripts": {
     "lint": "ng lint --type-check",
     "clean": "rimraf node_modules package-lock.json",
-    "build": "tsc -p ./server && ng build --prod --aot",
+    "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --single-run --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --single-run --no-progress",
     "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
-    "start": "set NODE_ENV=production && node app.js",
+    "start": "set NODE_ENV=production && node ./dist/server/server.js",
     "hmr": "concurrently \"nodemon \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
     "heroku-prebuild": "npm i -g @angular/cli ts-node",
-    "heroku-postbuild": "ng build --prod --aot --no-progress",
+    "heroku-postbuild": "ng build --prod --no-progress",
     "ng": "ng"
   },
   "dependencies": {
@@ -59,7 +59,7 @@
     "angular-tree-component": "^7.0.1",
     "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "4.0.0-beta.2",
     "compression": "^1.7.1",
     "config": "^1.29.0",
     "cookie-parser": "^1.4.3",
