--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,22 +1,22 @@
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-        "module": "commonjs",
-        "outDir": "../dist",
-        "sourceMap": false,
-        "declaration": false,
-        "skipLibCheck": true,
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "target": "es6"
-    },
-    "include": [
-        "modules/**/*",
-        "server.ts"
-    ],
-    "exclude": [
-        "./node_modules",
-        "**/*.spec.ts"
-    ]
+  "compileOnSave": false,
+  "compilerOptions": {
+    "module": "commonjs",
+    "outDir": "../dist/server",
+    "sourceMap": false,
+    "declaration": false,
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es6"
+  },
+  "include": [
+    "modules/**/*",
+    "server.ts"
+  ],
+  "exclude": [
+    "./node_modules",
+    "**/*.spec.ts"
+  ]
 }
