--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "../dist/server",
+    "mapRoot": "../dist/server",
     "sourceMap": false,
     "declaration": false,
     "skipLibCheck": true,
