chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -31,87 +31,86 @@
     "ng": "ng"
   },
   "dependencies": {
-    "@angular/animations": "^5.1.2",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/compiler-cli": "^5.1.2",
-    "@angular/core": "^5.1.2",
-    "@angular/forms": "^5.1.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "@angular/router": "^5.1.2",
+    "@angular/animations": "^5.2.4",
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/compiler-cli": "^5.2.4",
+    "@angular/core": "^5.2.4",
+    "@angular/forms": "^5.2.4",
+    "@angular/platform-browser": "^5.2.4",
+    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/router": "^5.2.4",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "@nestjs/common": "^4.5.6",
-    "@nestjs/core": "^4.5.7",
-    "@nestjs/microservices": "^4.5.7",
-    "@nestjs/mongoose": "^2.0.0",
+    "@nestjs/common": "^4.5.9",
+    "@nestjs/core": "^4.5.10",
+    "@nestjs/microservices": "^4.5.8",
+    "@nestjs/mongoose": "^3.0.1",
     "@nestjs/testing": "^4.5.5",
-    "@nestjs/websockets": "^4.5.7",
-    "@ngx-translate/core": "9.0.2",
+    "@nestjs/websockets": "^4.5.8",
+    "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
-    "@types/bcrypt": "^1.0.0",
-    "@types/jasmine": "^2.8.3",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/mocha": "2.2.46",
-    "@types/node": "~9.3.0",
-    "@types/supertest": "^2.0.4",
     "angular-tree-component": "^7.0.1",
     "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "4.0.0",
     "compression": "^1.7.1",
-    "config": "^1.29.1",
+    "config": "^1.29.4",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
     "database-updates": "^2.0.0",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.9",
+    "jsonwebtoken": "^8.1.1",
+    "mongoose": "^5.0.4",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "ngx-bootstrap": "^2.0.0-rc.0",
-    "ngx-clickout": "^1.0.2",
-    "nodemon": "^1.14.9",
+    "ngx-bootstrap": "^2.0.2",
+    "nodemon": "^1.14.12",
     "normalize-css": "^2.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "redis": "^2.8.0",
-    "reflect-metadata": "^0.1.10",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
-    "ts-node": "~4.1.0",
-    "typescript": "~2.6.2",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.3",
-    "@angular/language-service": "^5.1.2",
+    "@angular/cli": "^1.6.8",
+    "@angular/language-service": "^5.2.4",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^1.8.0",
-    "@types/chai": "^4.1.0",
+    "@nestjs/cli": "^2.0.0-rc.3",
+    "@types/chai": "^4.1.2",
     "@types/chai-http": "3.0.3",
-    "@types/config": "0.0.33",
+    "@types/config": "0.0.34",
     "@types/faker": "^4.1.2",
+    "@types/jasmine": "^2.8.6",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/mocha": "2.2.48",
+    "@types/supertest": "^2.0.4",
+    "@types/bcrypt": "^1.0.0",
+    "@types/node": "~9.3.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "codelyzer": "~4.0.2",
+    "codelyzer": "~4.1.0",
     "concurrently": "^3.5.1",
     "faker": "^4.1.0",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.3",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-typescript": "^3.0.9",
-    "mocha": "^4.1.0",
-    "mockgoose": "^7.3.3",
-    "protractor": "~5.2.2",
+    "karma-typescript": "^3.0.12",
+    "mocha": "^5.0.0",
+    "mockgoose": "^7.3.5",
+    "protractor": "~5.3.0",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
-    "tslint": "~5.8.0"
+    "tslint": "~5.9.1",
+    "ts-node": "~4.1.0",
+    "typescript": "~2.6.2"
   }
 }
