--- a/package.json
+++ b/package.json
@@ -42,14 +42,16 @@
     "@angular/router": "^5.2.4",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "@nestjs/common": "^4.5.9",
-    "@nestjs/core": "^4.5.10",
-    "@nestjs/microservices": "^4.5.8",
+    "@clr/angular": "^0.11.4",
+    "@clr/icons": "^0.11.4",
+    "@clr/ui": "^0.11.4",
+    "@nestjs/common": "^4.6.0",
+    "@nestjs/core": "^4.6.0",
     "@nestjs/mongoose": "^3.0.1",
     "@nestjs/testing": "^4.5.5",
-    "@nestjs/websockets": "^4.5.8",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
+    "@webcomponents/custom-elements": "^1.0.8",
     "angular-tree-component": "^7.0.1",
     "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
@@ -69,7 +71,6 @@
     "normalize-css": "^2.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
-    "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
@@ -86,7 +87,6 @@
     "@types/faker": "^4.1.2",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
-    "@types/mocha": "2.2.48",
     "@types/supertest": "^2.0.4",
     "@types/bcrypt": "^1.0.0",
     "@types/node": "~9.3.0",
@@ -106,6 +106,7 @@
     "karma-typescript": "^3.0.12",
     "mocha": "^5.0.0",
     "mockgoose": "^7.3.5",
+    "nodemon": "^1.14.12",
     "protractor": "~5.3.0",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
