--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
-    "start": "set NODE_ENV=production && node ./dist/server/server.js",
+    "prestart": "npm run build",
+    "start": "set NODE_ENV=production && node ./dist/server/main.js",
     "hmr": "concurrently \"nodemon \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
     "heroku-prebuild": "npm i -g @angular/cli ts-node",
-    "heroku-postbuild": "ng build --prod --no-progress",
     "ng": "ng"
   },
   "dependencies": {
@@ -67,7 +67,6 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^2.0.2",
-    "nodemon": "^1.14.12",
     "normalize-css": "^2.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
