--- a/package.json
+++ b/package.json
@@ -31,24 +31,25 @@
     "ng": "ng"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.4",
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/compiler-cli": "^5.2.4",
-    "@angular/core": "^5.2.4",
-    "@angular/forms": "^5.2.4",
-    "@angular/platform-browser": "^5.2.4",
-    "@angular/platform-browser-dynamic": "^5.2.4",
-    "@angular/router": "^5.2.4",
+    "@angular/animations": "^5.2.5",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/compiler-cli": "^5.2.5",
+    "@angular/core": "^5.2.5",
+    "@angular/forms": "^5.2.5",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
+    "@angular/router": "^5.2.5",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "@clr/angular": "^0.11.4",
-    "@clr/icons": "^0.11.4",
-    "@clr/ui": "^0.11.4",
-    "@nestjs/common": "^4.6.0",
-    "@nestjs/core": "^4.6.0",
+    "@clr/angular": "^0.11.5",
+    "@clr/icons": "^0.11.5",
+    "@clr/ui": "^0.11.5",
+    "@nestjs/common": "^4.6.4",
+    "@nestjs/core": "^4.6.4",
     "@nestjs/mongoose": "^3.0.1",
-    "@nestjs/testing": "^4.5.5",
+    "@nestjs/swagger": "^1.1.4",
+    "@nestjs/testing": "^4.6.1",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
     "@webcomponents/custom-elements": "^1.0.8",
@@ -56,14 +57,15 @@
     "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
     "bootstrap": "4.0.0",
-    "compression": "^1.7.1",
+    "compression": "^1.7.2",
     "config": "^1.29.4",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
     "database-updates": "^2.0.0",
+    "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.0.4",
+    "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^2.0.2",
@@ -76,19 +78,19 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.8",
-    "@angular/language-service": "^5.2.4",
+    "@angular/cli": "^1.7.0",
+    "@angular/language-service": "^5.2.5",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^2.0.0-rc.3",
     "@types/chai": "^4.1.2",
-    "@types/chai-http": "3.0.3",
+    "@types/chai-http": "3.0.4",
     "@types/config": "0.0.34",
     "@types/faker": "^4.1.2",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
     "@types/supertest": "^2.0.4",
     "@types/bcrypt": "^1.0.0",
-    "@types/node": "~9.3.0",
+    "@types/node": "~9.4.6",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "codelyzer": "~4.1.0",
@@ -103,14 +105,14 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-typescript": "^3.0.12",
-    "mocha": "^5.0.0",
+    "mocha": "^5.0.1",
     "mockgoose": "^7.3.5",
-    "nodemon": "^1.14.12",
+    "nodemon": "^1.15.1",
     "protractor": "~5.3.0",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
     "tslint": "~5.9.1",
-    "ts-node": "~4.1.0",
-    "typescript": "~2.6.2"
+    "ts-node": "~5.0.0",
+    "typescript": "~2.7.2"
   }
 }
