--- a/package.json
+++ b/package.json
@@ -31,22 +31,22 @@
     "ng": "ng"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.6",
-    "@angular/common": "^5.2.6",
-    "@angular/compiler": "^5.2.6",
-    "@angular/compiler-cli": "^5.2.6",
-    "@angular/core": "^5.2.6",
-    "@angular/forms": "^5.2.6",
-    "@angular/platform-browser": "^5.2.6",
-    "@angular/platform-browser-dynamic": "^5.2.6",
-    "@angular/router": "^5.2.6",
+    "@angular/animations": "^5.2.7",
+    "@angular/common": "^5.2.7",
+    "@angular/compiler": "^5.2.7",
+    "@angular/compiler-cli": "^5.2.7",
+    "@angular/core": "^5.2.7",
+    "@angular/forms": "^5.2.7",
+    "@angular/platform-browser": "^5.2.7",
+    "@angular/platform-browser-dynamic": "^5.2.7",
+    "@angular/router": "^5.2.7",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "@clr/angular": "^0.11.5",
-    "@clr/icons": "^0.11.5",
-    "@clr/ui": "^0.11.5",
-    "@nestjs/common": "^4.6.4",
-    "@nestjs/core": "^4.6.4",
+    "@clr/angular": "^0.11.7-patch.1",
+    "@clr/icons": "^0.11.7-patch.1",
+    "@clr/ui": "^0.11.7-patch.1",
+    "@nestjs/common": "^4.6.5",
+    "@nestjs/core": "^4.6.5",
     "@nestjs/mongoose": "^3.0.1",
     "@nestjs/swagger": "^1.1.4",
     "@nestjs/testing": "^4.6.1",
@@ -56,20 +56,18 @@
     "angular-tree-component": "^7.0.1",
     "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
-    "bootstrap": "4.0.0",
     "compression": "^1.7.2",
-    "config": "^1.29.4",
+    "config": "^1.30.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
     "database-updates": "^2.0.0",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.0.6",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.8",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "ngx-bootstrap": "^2.0.2",
-    "normalize-css": "^2.3.1",
+    "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "reflect-metadata": "^0.1.12",
@@ -78,8 +76,8 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.0",
-    "@angular/language-service": "^5.2.6",
+    "@angular/cli": "^1.7.2",
+    "@angular/language-service": "^5.2.7",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^2.0.0-rc.3",
     "@types/chai": "^4.1.2",
@@ -93,10 +91,10 @@
     "@types/node": "~9.4.6",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "codelyzer": "~4.1.0",
+    "codelyzer": "~4.2.1",
     "concurrently": "^3.5.1",
     "faker": "^4.1.0",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -107,12 +105,12 @@
     "karma-typescript": "^3.0.12",
     "mocha": "^5.0.1",
     "mockgoose": "^7.3.5",
-    "nodemon": "^1.15.1",
+    "nodemon": "^1.17.1",
     "protractor": "~5.3.0",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
     "tslint": "~5.9.1",
-    "ts-node": "~5.0.0",
+    "ts-node": "~5.0.1",
     "typescript": "~2.7.2"
   }
 }
