--- a/package.json
+++ b/package.json
@@ -31,25 +31,25 @@
     "ng": "ng"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.7",
-    "@angular/common": "^5.2.7",
-    "@angular/compiler": "^5.2.7",
-    "@angular/compiler-cli": "^5.2.7",
-    "@angular/core": "^5.2.7",
-    "@angular/forms": "^5.2.7",
-    "@angular/platform-browser": "^5.2.7",
-    "@angular/platform-browser-dynamic": "^5.2.7",
-    "@angular/router": "^5.2.7",
+    "@angular/animations": "^5.2.9",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
     "@angularclass/hmr": "^2.1.3",
-    "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "@clr/angular": "^0.11.7-patch.1",
-    "@clr/icons": "^0.11.7-patch.1",
-    "@clr/ui": "^0.11.7-patch.1",
-    "@nestjs/common": "^4.6.5",
-    "@nestjs/core": "^4.6.5",
+    "@auth0/angular-jwt": "^1.1.0",
+    "@clr/angular": "^0.11.8",
+    "@clr/icons": "^0.11.8",
+    "@clr/ui": "^0.11.8",
+    "@nestjs/common": "^4.6.6",
+    "@nestjs/core": "^4.6.6",
     "@nestjs/mongoose": "^3.0.1",
     "@nestjs/swagger": "^1.1.4",
-    "@nestjs/testing": "^4.6.1",
+    "@nestjs/testing": "^4.6.6",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
     "@webcomponents/custom-elements": "^1.0.8",
@@ -61,23 +61,23 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
     "database-updates": "^2.0.0",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.2.0",
-    "mongoose": "^5.0.8",
+    "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^3.0.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.7",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.2",
-    "@angular/language-service": "^5.2.7",
+    "@angular/cli": "^1.7.3",
+    "@angular/language-service": "^5.2.9",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^2.0.0-rc.3",
     "@types/chai": "^4.1.2",
@@ -88,7 +88,7 @@
     "@types/jasminewd2": "^2.0.3",
     "@types/supertest": "^2.0.4",
     "@types/bcrypt": "^1.0.0",
-    "@types/node": "~9.4.6",
+    "@types/node": "~9.4.7",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "codelyzer": "~4.2.1",
@@ -99,13 +99,13 @@
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-typescript": "^3.0.12",
-    "mocha": "^5.0.1",
+    "mocha": "^5.0.4",
     "mockgoose": "^7.3.5",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.17.2",
     "protractor": "~5.3.0",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
