chore: docker compose production setup

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "outDir": "../dist/server",
     "mapRoot": "../dist/server",
-    "sourceMap": false,
+    "sourceMap": true,
     "declaration": false,
     "skipLibCheck": true,
     "moduleResolution": "node",
