--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --single-run --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --single-run --no-progress",
-    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
+    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
@@ -42,9 +42,9 @@
     "@angular/router": "^5.2.9",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.1.0",
-    "@clr/angular": "^0.11.11",
-    "@clr/icons": "^0.11.11",
-    "@clr/ui": "^0.11.11",
+    "@clr/angular": "^0.11.13",
+    "@clr/icons": "^0.11.13",
+    "@clr/ui": "^0.11.13",
     "@nestjs/common": "^4.6.6",
     "@nestjs/core": "^4.6.6",
     "@nestjs/mongoose": "^3.0.1",
@@ -63,31 +63,34 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.13",
+    "mongoose": "^5.0.14",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "normalize.css": "^8.0.0",
+    "npm": "^5.8.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.8",
+    "rxjs": "^5.5.10",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.25"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/language-service": "^5.2.9",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^4.0.0-rc.1",
+    "@nestjs/cli": "^4.0.0-rc2",
+    "@types/bcrypt": "^1.0.0",
     "@types/chai": "^4.1.2",
     "@types/chai-http": "3.0.4",
     "@types/config": "0.0.34",
+    "@types/express": "^4.11.1",
     "@types/faker": "^4.1.2",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
+    "@types/mocha": "5.0.0",
+    "@types/node": "~9.6.5",
     "@types/supertest": "^2.0.4",
-    "@types/bcrypt": "^1.0.0",
-    "@types/node": "~9.6.2",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "codelyzer": "~4.2.1",
@@ -102,14 +105,14 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.0.0",
     "karma-typescript": "^3.0.12",
-    "mocha": "^5.0.5",
+    "mocha": "^5.1.0",
     "mockgoose": "^7.3.5",
     "nodemon": "^1.17.3",
     "protractor": "~5.3.1",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
-    "tslint": "~5.9.1",
     "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
     "typescript": "~2.8.1"
   }
 }
