chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
     "ng": "ng"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
+    "@angular/animations": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.1.0",
-    "@clr/angular": "^0.11.13",
-    "@clr/icons": "^0.11.13",
-    "@clr/ui": "^0.11.13",
+    "@clr/angular": "^0.11.14",
+    "@clr/icons": "^0.11.14",
+    "@clr/ui": "^0.11.14",
     "@nestjs/common": "^4.6.6",
     "@nestjs/core": "^4.6.6",
     "@nestjs/mongoose": "^3.0.1",
@@ -52,22 +52,21 @@
     "@nestjs/testing": "^4.6.6",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
-    "@webcomponents/custom-elements": "^1.0.9",
-    "angular2-notifications": "^0.9.8",
-    "bcrypt": "^1.0.3",
+    "@webcomponents/custom-elements": "^1.1.0",
+    "angular2-notifications": "^1.0.1",
+    "bcrypt": "^2.0.1",
     "compression": "^1.7.2",
     "config": "^1.30.0",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.4",
+    "core-js": "^2.5.5",
     "database-updates": "^2.0.0",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.14",
+    "mongoose": "^5.0.15",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "normalize.css": "^8.0.0",
-    "npm": "^5.8.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
@@ -77,42 +76,42 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4",
-    "@angular/language-service": "^5.2.9",
+    "@angular/language-service": "^5.2.10",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^4.0.0-rc2",
+    "@nestjs/cli": "^5.0.1",
     "@types/bcrypt": "^1.0.0",
-    "@types/chai": "^4.1.2",
+    "@types/chai": "^4.1.3",
     "@types/chai-http": "3.0.4",
     "@types/config": "0.0.34",
     "@types/express": "^4.11.1",
     "@types/faker": "^4.1.2",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
-    "@types/mocha": "5.0.0",
-    "@types/node": "~9.6.5",
+    "@types/mocha": "5.2.0",
+    "@types/node": "~9.6.6",
     "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "~4.3.0",
     "concurrently": "^3.5.1",
     "faker": "^4.1.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~2.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.0.0",
     "karma-typescript": "^3.0.12",
-    "mocha": "^5.1.0",
+    "mocha": "^5.1.1",
     "mockgoose": "^7.3.5",
     "nodemon": "^1.17.3",
     "protractor": "~5.3.1",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
-    "ts-node": "~5.0.1",
+    "ts-node": "~6.0.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.8.1"
+    "typescript": "~2.8.3"
   }
 }
