--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
-    "prestart": "npm run build",
-    "start": "set NODE_ENV=production && node ./dist/server/main.js",
+    "start": "set NODE_ENV=production node ./dist/server/main.js",
     "hmr": "concurrently \"nodemon \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
     "heroku-prebuild": "npm i -g @angular/cli ts-node",
+    "heroku-postbuild": "npm run build",
     "ng": "ng"
   },
   "dependencies": {
