--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
-    "start": "set NODE_ENV=production node ./dist/server/main.js",
+    "start": "set NODE_ENV=production&&node ./dist/server/main.js",
     "hmr": "concurrently \"nodemon \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
