--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "hmr": "concurrently \"nodemon \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
-    "heroku-prebuild": "npm i -g @angular/cli ts-node",
+    "heroku-prebuild": "npm i -g @angular/cli",
     "heroku-postbuild": "npm run build",
     "ng": "ng"
   },
