--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "scripts": {
-    "lint": "ng lint --type-check",
+    "lint": "ng lint",
     "clean": "rimraf node_modules package-lock.json",
     "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --single-run --no-progress && npm run test:backend",
@@ -23,7 +23,7 @@
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
     "start": "set NODE_ENV=production&&node ./dist/server/main.js",
-    "hmr": "concurrently \"nodemon \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
+    "hmr": "concurrently \"nodemon \" \"ng serve --hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
     "heroku-prebuild": "npm i -g @angular/cli",
@@ -31,28 +31,28 @@
     "ng": "ng"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.1.0",
-    "@clr/angular": "^0.11.15",
-    "@clr/icons": "^0.11.15",
-    "@clr/ui": "^0.11.15",
+    "@clr/angular": "^0.11.16",
+    "@clr/icons": "^0.11.16",
+    "@clr/ui": "^0.11.16",
     "@nestjs/common": "^4.6.6",
     "@nestjs/core": "^4.6.6",
     "@nestjs/mongoose": "^3.0.1",
     "@nestjs/swagger": "^1.2.2",
     "@nestjs/testing": "^4.6.6",
-    "@ngx-translate/core": "9.1.1",
+    "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
-    "@webcomponents/custom-elements": "^1.1.0",
+    "@webcomponents/custom-elements": "^1.0.0",
     "angular2-notifications": "^1.0.1",
     "bcrypt": "^2.0.1",
     "compression": "^1.7.2",
@@ -63,29 +63,30 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.16",
+    "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.10",
-    "web-animations-js": "^2.3.1",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/language-service": "^5.2.10",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^5.0.1",
+    "@nestjs/cli": "^5.1.1",
     "@types/bcrypt": "^1.0.0",
     "@types/chai": "^4.1.3",
     "@types/chai-http": "3.0.4",
     "@types/config": "0.0.34",
     "@types/express": "^4.11.1",
     "@types/faker": "^4.1.2",
-    "@types/jasmine": "^2.8.6",
+    "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "5.2.0",
     "@types/node": "~9.6.6",
@@ -101,7 +102,7 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "~1.1.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.0.0",
     "karma-typescript": "^3.0.12",
     "mocha": "^5.1.1",
@@ -110,8 +111,8 @@
     "protractor": "~5.3.1",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
-    "ts-node": "~6.0.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.8.3"
+    "ts-node": "~6.0.2",
+    "tslint": "~5.10.0",
+    "typescript": "^2.7.2"
   }
 }
