--- a/package.json
+++ b/package.json
@@ -113,6 +113,6 @@
     "supertest": "^3.0.0",
     "ts-node": "~6.0.2",
     "tslint": "~5.10.0",
-    "typescript": "^2.7.2"
+    "typescript": "~2.7.2"
   }
 }
