test(*): fix test imports

--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,7 @@
             ],
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/assets/favicon.ico"
             ]
           }
         },
