refactor(server): update to Nest 5

--- a/package.json
+++ b/package.json
@@ -45,16 +45,18 @@
     "@clr/angular": "^0.11.17",
     "@clr/icons": "^0.11.17",
     "@clr/ui": "^0.11.17",
-    "@nestjs/common": "^4.6.6",
-    "@nestjs/core": "^4.6.6",
-    "@nestjs/mongoose": "^3.0.1",
-    "@nestjs/swagger": "^1.2.2",
-    "@nestjs/testing": "^4.6.6",
+    "@nestjs/common": "^5.0.0",
+    "@nestjs/core": "^5.0.0",
+    "@nestjs/mongoose": "^4.0.0",
+    "@nestjs/swagger": "^2.0.0",
+    "@nestjs/testing": "^5.0.0",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
     "@webcomponents/custom-elements": "^1.0.0",
     "angular2-notifications": "^1.0.2",
     "bcrypt": "^2.0.1",
+    "class-transformer": "^0.1.9",
+    "class-validator": "^0.8.5",
     "compression": "^1.7.2",
     "config": "^1.30.0",
     "cookie-parser": "^1.4.3",
