--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ services:
   - mongodb
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install chromium-chromedriver
-  - export CHROME_BIN=chromium-browser
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3
-  - 'node_modules/protractor/bin/webdriver-manager update &'
-  - sleep 10
-  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'
-  - sleep 5
+  # - sudo apt-get update
+  # - sudo apt-get install chromium-chromedriver
+  # - export CHROME_BIN=chromium-browser
+  # - "export DISPLAY=:99.0"
+  # - "sh -e /etc/init.d/xvfb start"
+  # - sleep 3
+  # - 'node_modules/protractor/bin/webdriver-manager update &'
+  # - sleep 10
+  # - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'
+  # - sleep 5
 
 before_script:
   - sleep 15
