test(backend): fix tests

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --single-run --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --single-run --no-progress",
-    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
+    "test:backend": "./node_modules/.bin/_mocha ./server/**/*.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
+    "test:backend-e2e": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
@@ -112,6 +113,7 @@
     "nodemon": "^1.17.3",
     "protractor": "~5.3.1",
     "rimraf": "^2.6.2",
+    "sinon": "^5.0.7",
     "supertest": "^3.0.0",
     "ts-node": "~6.0.2",
     "tslint": "~5.10.0",
