--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "@angular/router": "^6.0.3",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.11.19",
-    "@clr/icons": "^0.11.19",
-    "@clr/ui": "^0.11.19",
+    "@clr/angular": "^0.11.20",
+    "@clr/icons": "^0.11.20",
+    "@clr/ui": "^0.11.20",
     "@nestjs/common": "^5.0.1",
     "@nestjs/core": "^5.0.1",
     "@nestjs/mongoose": "^5.0.0",
-    "@nestjs/swagger": "^2.0.0",
+    "@nestjs/swagger": "^2.0.2",
     "@nestjs/testing": "^5.0.1",
     "@ngx-translate/core": "10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
@@ -71,8 +71,8 @@
     "database-updates": "^2.0.0",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.1.2",
+    "jsonwebtoken": "^8.2.2",
+    "mongoose": "^5.1.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "normalize.css": "^8.0.0",
@@ -84,8 +84,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.5",
-    "@angular/cli": "^6.0.5",
+    "@angular-devkit/build-angular": "~0.7.0-beta.1",
+    "@angular/cli": "^6.0.7",
     "@angular/language-service": "^6.0.3",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^5.1.2",
@@ -95,10 +95,10 @@
     "@types/config": "0.0.34",
     "@types/express": "^4.11.1",
     "@types/faker": "^4.1.2",
-    "@types/jasmine": "^2.8.7",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
-    "@types/mocha": "5.2.0",
-    "@types/node": "~10.1.2",
+    "@types/mocha": "5.2.1",
+    "@types/node": "~10.3.0",
     "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
@@ -111,9 +111,9 @@
     "karma": "~2.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-jasmine-html-reporter": "^1.1.0",
     "karma-typescript": "^3.0.12",
     "mocha": "^5.2.0",
     "mockgoose": "^7.3.5",
