--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-storage",
-  "version": "0.35.0",
+  "version": "0.36.0",
   "description": "Test Case Management System",
   "license": "GPLv3",
   "author": "Dmitry Zakharov",
@@ -38,15 +38,15 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^6.0.4",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/compiler-cli": "^6.0.4",
+    "@angular/core": "^6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/platform-browser": "^6.0.4",
+    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/router": "^6.0.4",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
     "@clr/angular": "^0.11.20",
@@ -72,7 +72,7 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.2.2",
-    "mongoose": "^5.1.3",
+    "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "normalize.css": "^8.0.0",
@@ -84,21 +84,21 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0-beta.1",
-    "@angular/cli": "^6.0.7",
-    "@angular/language-service": "^6.0.3",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/language-service": "^6.0.4",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^5.1.2",
+    "@nestjs/cli": "^5.2.0",
     "@types/bcrypt": "^2.0.0",
     "@types/chai": "^4.1.3",
     "@types/chai-http": "3.0.4",
     "@types/config": "0.0.34",
-    "@types/express": "^4.11.1",
+    "@types/express": "^4.16.0",
     "@types/faker": "^4.1.2",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "5.2.1",
-    "@types/node": "~10.3.0",
+    "@types/node": "~10.3.1",
     "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
@@ -114,15 +114,14 @@
     "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.1.0",
-    "karma-typescript": "^3.0.12",
     "mocha": "^5.2.0",
     "mockgoose": "^7.3.5",
     "nodemon": "^1.17.5",
     "protractor": "~5.3.2",
     "rimraf": "^2.6.2",
-    "sinon": "^5.0.10",
+    "sinon": "^5.1.0",
     "supertest": "^3.1.0",
-    "ts-node": "~6.0.5",
+    "ts-node": "~6.1.0",
     "tslint": "~5.10.0",
     "typescript": "~2.7.2"
   }
