--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "@angular/router": "^6.0.4",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.11.20",
-    "@clr/icons": "^0.11.20",
-    "@clr/ui": "^0.11.20",
+    "@clr/angular": "^0.12.0-rc.2",
+    "@clr/icons": "^0.12.0-rc.2",
+    "@clr/ui": "^0.12.0-rc.2",
     "@nestjs/common": "^5.0.1",
     "@nestjs/core": "^5.0.1",
     "@nestjs/mongoose": "^5.0.0",
