--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^6.0.4",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
-    "@angular/router": "^6.0.4",
+    "@angular/animations": "^6.0.5",
+    "@angular/common": "^6.0.5",
+    "@angular/compiler": "^6.0.5",
+    "@angular/compiler-cli": "^6.0.5",
+    "@angular/core": "^6.0.5",
+    "@angular/forms": "^6.0.5",
+    "@angular/platform-browser": "^6.0.5",
+    "@angular/platform-browser-dynamic": "^6.0.5",
+    "@angular/router": "^6.0.5",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.12.0-rc.2",
-    "@clr/icons": "^0.12.0-rc.2",
-    "@clr/ui": "^0.12.0-rc.2",
+    "@clr/angular": "^0.12.0",
+    "@clr/icons": "^0.12.0",
+    "@clr/ui": "^0.12.0",
     "@nestjs/common": "^5.0.1",
     "@nestjs/core": "^5.0.1",
     "@nestjs/mongoose": "^5.0.0",
@@ -86,11 +86,11 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
-    "@angular/language-service": "^6.0.4",
+    "@angular/language-service": "^6.0.5",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^5.2.0",
     "@types/bcrypt": "^2.0.0",
-    "@types/chai": "^4.1.3",
+    "@types/chai": "^4.1.4",
     "@types/chai-http": "3.0.4",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
@@ -98,7 +98,7 @@
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "5.2.2",
-    "@types/node": "~10.3.2",
+    "@types/node": "~10.3.3",
     "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
