chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -38,30 +38,30 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^6.0.6",
-    "@angular/common": "^6.0.6",
-    "@angular/compiler": "^6.0.6",
-    "@angular/compiler-cli": "^6.0.6",
-    "@angular/core": "^6.0.6",
-    "@angular/forms": "^6.0.6",
-    "@angular/platform-browser": "^6.0.6",
-    "@angular/platform-browser-dynamic": "^6.0.6",
-    "@angular/router": "^6.0.6",
+    "@angular/animations": "^6.0.7",
+    "@angular/common": "^6.0.7",
+    "@angular/compiler": "^6.0.7",
+    "@angular/compiler-cli": "^6.0.7",
+    "@angular/core": "^6.0.7",
+    "@angular/forms": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7",
+    "@angular/platform-browser-dynamic": "^6.0.7",
+    "@angular/router": "^6.0.7",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.12.1",
-    "@clr/icons": "^0.12.1",
-    "@clr/ui": "^0.12.1",
-    "@nestjs/common": "^5.0.1",
-    "@nestjs/core": "^5.0.1",
+    "@clr/angular": "^0.12.3-patch.2",
+    "@clr/icons": "^0.12.1-patch.2",
+    "@clr/ui": "^0.12.1-patch.2",
+    "@nestjs/common": "^5.1.0",
+    "@nestjs/core": "^5.1.0",
     "@nestjs/mongoose": "^5.0.0",
-    "@nestjs/swagger": "^2.0.2",
-    "@nestjs/testing": "^5.0.1",
+    "@nestjs/swagger": "^2.2.0",
+    "@nestjs/testing": "^5.1.0",
     "@ngx-translate/core": "10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
     "@webcomponents/custom-elements": "^1.1.2",
     "angular2-notifications": "^1.0.2",
-    "bcrypt": "^2.0.1",
+    "bcrypt": "^3.0.0",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.8.5",
     "compression": "^1.7.2",
@@ -72,9 +72,9 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.1.6",
+    "mongoose": "^5.2.1",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0",
+    "multer": "^1.3.1",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -85,9 +85,9 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
-    "@angular/language-service": "^6.0.6",
+    "@angular/language-service": "^6.0.7",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^5.2.0",
+    "@nestjs/cli": "^5.3.0",
     "@types/bcrypt": "^2.0.0",
     "@types/chai": "^4.1.4",
     "@types/chai-http": "3.0.4",
@@ -96,8 +96,8 @@
     "@types/faker": "^4.1.2",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
-    "@types/mocha": "5.2.3",
-    "@types/node": "~10.3.5",
+    "@types/mocha": "5.2.4",
+    "@types/node": "~10.5.2",
     "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
@@ -112,13 +112,13 @@
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.1.0",
+    "karma-jasmine-html-reporter": "^1.2.0",
     "mocha": "^5.2.0",
     "mockgoose": "^7.3.5",
     "nodemon": "^1.17.5",
     "protractor": "~5.3.2",
     "rimraf": "^2.6.2",
-    "sinon": "^6.0.0",
+    "sinon": "^6.1.3",
     "supertest": "^3.1.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.10.0",
