--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^6.0.7",
-    "@angular/common": "^6.0.7",
-    "@angular/compiler": "^6.0.7",
-    "@angular/compiler-cli": "^6.0.7",
-    "@angular/core": "^6.0.7",
-    "@angular/forms": "^6.0.7",
-    "@angular/platform-browser": "^6.0.7",
-    "@angular/platform-browser-dynamic": "^6.0.7",
-    "@angular/router": "^6.0.7",
+    "@angular/animations": "^6.0.9",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/compiler-cli": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/forms": "^6.0.9",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/router": "^6.0.9",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.12.3-patch.2",
-    "@clr/icons": "^0.12.1-patch.2",
-    "@clr/ui": "^0.12.1-patch.2",
+    "@clr/angular": "^0.12.4",
+    "@clr/icons": "^0.12.4",
+    "@clr/ui": "^0.12.4",
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/mongoose": "^5.0.0",
@@ -64,7 +64,7 @@
     "bcrypt": "^3.0.0",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.8.5",
-    "compression": "^1.7.2",
+    "compression": "^1.7.3",
     "config": "^1.30.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.7",
@@ -72,25 +72,25 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.1",
+    "mongoose": "^5.2.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
-    "@angular/language-service": "^6.0.7",
+    "@angular/language-service": "^6.0.9",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^5.3.0",
     "@types/bcrypt": "^2.0.0",
     "@types/chai": "^4.1.4",
-    "@types/chai-http": "3.0.4",
+    "@types/chai-http": "3.0.5",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
     "@types/faker": "^4.1.2",
@@ -101,7 +101,7 @@
     "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "codelyzer": "~4.4.0",
+    "codelyzer": "~4.4.2",
     "concurrently": "^3.6.0",
     "faker": "^4.1.0",
     "husky": "^0.14.3",
@@ -115,7 +115,7 @@
     "karma-jasmine-html-reporter": "^1.2.0",
     "mocha": "^5.2.0",
     "mockgoose": "^7.3.5",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.2",
     "protractor": "~5.3.2",
     "rimraf": "^2.6.2",
     "sinon": "^6.1.3",
