--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "lint": "ng lint",
     "clean": "rimraf node_modules package-lock.json",
+    "prebuild": "ts-node ./server/modules/jwt-init.ts",
     "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --watch=false --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --watch=false --no-progress",
@@ -27,7 +28,7 @@
     "hmr": "concurrently \"nodemon \" \"ng serve --hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
-    "heroku-prebuild": "npm i -g @angular/cli",
+    "heroku-prebuild": "npm i -g @angular/cli ts-node",
     "heroku-postbuild": "npm run build",
     "ng": "ng"
   },
