--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "@angular/router": "^6.1.3",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.12.9",
-    "@clr/icons": "^0.12.9",
-    "@clr/ui": "^0.12.9",
+    "@clr/angular": "^0.13.0-beta.1",
+    "@clr/icons": "^0.13.0-beta.1",
+    "@clr/ui": "^0.13.0-beta.1",
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/mongoose": "^5.1.0",
