--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/mongoose": "^5.1.0",
     "@nestjs/swagger": "^2.3.0",
     "@nestjs/testing": "^5.1.0",
+    "@nestjs/websockets": "^5.1.0",
     "@ngx-translate/core": "10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
     "@webcomponents/custom-elements": "^1.2.0",
@@ -81,6 +82,7 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
+    "socket.io": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
