--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "ws": "^3.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -102,6 +104,7 @@
     "@types/mocha": "5.2.5",
     "@types/node": "~10.7.1",
     "@types/supertest": "^2.0.5",
+    "@types/ws": "^6.0.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "codelyzer": "~4.4.4",
