--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "codelyzer": "~4.4.4",
     "concurrently": "^3.6.1",
     "faker": "^4.1.0",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.13",
     "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
