chore: update project structure according last ng cli

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 *.map
 test/client/**/*.js
 
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+
 # dependencies
 /node_modules
 
@@ -36,12 +41,9 @@ test/client/**/*.js
 /coverage
 /libpeerconnection.log
 npm-debug.log
+yarn-error.log
 testem.log
 /typings
-
-# e2e
-/e2e/*.js
-/e2e/*.map
 
 # System Files
 .DS_Store
