--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "lint": "ng lint",
     "clean": "rimraf node_modules package-lock.json",
-    "prebuild": "ts-node ./server/modules/jwt-init.ts",
+    "prebuild": "ts-node --project ./server/tsconfig.json ./server/modules/jwt-init.ts",
     "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --watch=false --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --watch=false --no-progress",
@@ -23,10 +23,10 @@
     "test:backend-e2e": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
-    "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
+    "e2e": "ng e2e",
     "start": "set NODE_ENV=production&&node ./dist/server/main.js",
-    "hmr": "concurrently \"nodemon \" \"ng serve --hmr --progress=false --proxy-config proxy.conf.json\" ",
-    "dev": "concurrently \"nodemon \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
+    "hmr": "concurrently \"nodemon \" \"ng serve --configuration hmr --progress=false\" ",
+    "dev": "concurrently \"nodemon \" \"ng serve --progress=false\"  ",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
     "heroku-prebuild": "npm i -g @angular/cli ts-node",
     "heroku-postbuild": "npm run build",
@@ -34,8 +34,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test",
-      "pre-push": "npm run lint && npm test"
+      "pre-commit": "npm run lint && npm test"
     }
   },
   "dependencies": {
