--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,21 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    // "module": "es2015", off due to ts-node + mocha
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "skipLibCheck": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "jasmine",
-      "mocha",
-      "supertest"
     ],
     "lib": [
       "es2017",
       "dom"
     ]
-  },
-  "exclude": [
-    "node_modules"
-  ]
+  }
 }
