--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "@angular/forms": "^6.1.7",
     "@angular/platform-browser": "^6.1.7",
     "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/pwa": "^0.8.3",
     "@angular/router": "^6.1.7",
+    "@angular/service-worker": "^6.1.7",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
     "@clr/angular": "^0.13.1-patch.1",
