chore(ci): fix build and test

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "scripts": {
     "ng": "ng",
     "lint": "ng lint",
-    "prebuild": "ts-node --project ./server/tsconfig.json ./server/modules/jwt-init.ts",
-    "build": "ng build --prod && tsc -p ./server",
+    "build": "ng build --prod",
     "test": "jest",
     "serve": "ng serve --configuration hmr --progress=false",
     "clean": "rimraf node_modules package-lock.json",
@@ -69,6 +68,7 @@
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@types/jest": "^24.0.23",
     "codelyzer": "~5.2.0",
     "concurrently": "^5.0.1",
     "faker": "^4.1.0",
