--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
+    "prebuild:old": "ts-node ./modules/jwt-init.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
